# cli-template

./: CHANGELOG.md  Cargo.toml  README.md  devbox.json  knope.toml
.changeset/: add_a_version_uninstall_command.md  add_the_version_changelog_command.md  add_the_version_update_command.md  configure_knope.md  provide_a_feedback_command.md  put_in_place_the_command_scaffolding.md
.github/workflows/: prepare-release.yaml  release.yaml
config/devbox/flakes/knope/: flake.nix
src/: cli_config.rs  cli_context.rs  main.rs  structs.rs
src/commands/: feedback.rs  mod.rs
src/commands/projects/: create.rs  mod.rs
src/commands/projects/tasks/: add.rs  mod.rs  remove.rs
src/commands/version/: changelog.rs  mod.rs  print.rs  uninstall.rs  update.rs
