[package]
name = "cli-template"
version = "0.0.6"
edition = "2021"

[[bin]]
name = "cli-template"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
clap-nested-commands = "0.0.6"
cliclack = "0.3.5"
confy = "0.6.1"
paste = "1.0.15"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
termimad = "0.31.2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(unix)'.dependencies]
self_update = { version = "0.42.0", default-features = false, features = [
    "archive-tar",
    "compression-flate2",
] }

[target.'cfg(windows)'.dependencies]
self_update = { version = "0.42.0", default-features = false, features = [
    "archive-zip",
] }
